--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <div id="5e" class="col-4 col-md-2 text-center title_dim">
         <div id="r1">
-        <h2> In the sea </h2>
+        <h2> At sea </h2>
         </div>
     </div>
 
