--- a/index.html
+++ b/index.html
@@ -243,15 +243,15 @@ Start April 2020 - End April 2040. Part of Atelier Temeraire’s workshop at Le 
                   
             <!--BUTTON in the sea  (v5-v8-v10) --->
             <li class="col-6 col-md-3 text-center" id="v13">
-                  <h3 id="r3" style="margin-bottom:5%;"> Move in the boat form one side to the other... </h3>
+                  <h3 id="r3" style="margin-bottom:5%;"> Move in the boat... </h3>
                   <img class="image_dimension" src="/img/barca1-01.png">
             </li>
             <li class="col-6 col-md-3 text-center" id="v13">
-                  <h3 id="r3" style="margin-bottom:5%;"> ...in order to make people feel the waves  </h3>
+                  <h3 id="r3" style="margin-bottom:5%;"> ...from one side to the other  </h3>
                   <img class="image_dimension" src="/img/barca2-01.png">
             </li>
             <li class="col-6 col-md-3 text-center" id="v13">
-                  <h3 id="r3" style="margin-bottom:5%;"> </h3>
+                  <h3  style="margin-bottom:5%;"> </h3>
                   <img class="image_dimension" src="/img/barca3-01.png">
             </li>
             <li class="col-6 col-md-3 text-center" id="v14">
